2007-01-27 Weston Schmidt <weston_schmidt AT alumni.purdue.edu>

	* configure.ac: Incremented the release number
	* NEWS: Updated the latest news about the 0.4.0 release
	* src/arguments.c, src/arguments.h: add two fields to the
	  chip configuration structures to handle the two
	  inconsistencies in the dfu firmware - the at90 chips
	  need to be aborted initially, and the at90 chips don't
	  return valid interface class and subclass information.
	  Originally, the interface problem was thought to be
	  related to OS X, but it now looks like it is the chipset.
	* src/dfu.c, src/dfu.h, src/main.c: add the handing of
	  the new initial abort and interface class/subclass workarounds.

2007-01-16 Weston Schmidt <weston_schmidt AT alumni.purdue.edu>

	* src/intel_hex.c: change the sscanf() parameter to an int
	  from a char to be compliant with the sscanf() %x documentation
	  stating that the output of %x is an int.

2007-01-14 Weston Schmidt <weston_schmidt AT alumni.purdue.edu>

	* src/arguments.c: added the flash_page_size data and values
	  to the data structure.  I checked to make sure that the
	  flash page size is correct for all of the processors.
	* src/arguments.h: added the flash_page_size data member to
	  the programmer_arguments data structure.
	* src/atmel.c: updated the atmel_flash() functionality so that
	  only the memory pages that need to be flashed are flashed.
	* src/atmel.h: updated the external interface for atmel_flash()
	  to refelect the changes in src/atmel.c
	* src/commands.c: changed the passing of the argument structure
	  to be a pointer instead of the actual full structure.
	  Updated the execute_flash() functionality to support the
	  changes made in src/atmel.x.
	* src/commands.h: updated the function prototype.
	* src/intel_hex.c: changed the processing of the hex strutures
	  to allow the support of only flashing the memory locations
	  that are actually programmed.
	* src/intel_hex.h: updated the function prototypes.